Changed engine constructor to require at least one point, changed changeDirection method to return boolean